--- a/assets/locales/fil.json
+++ b/assets/locales/fil.json
@@ -496,5 +496,20 @@
   "@prayerDetails": {
     "type": "text",
     "placeholders": {}
+  },
+  "min": "min",
+  "@min": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "h": "oras",
+  "@h": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "saving...": "Ini-save...",
+  "@saving...": {
+    "type": "text",
+    "placeholders": {}
   }
 }
