fetch Prayer data for 1 month

--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -322,17 +322,17 @@
     "type": "text",
     "placeholders": {}
   },
-  "about_app": "'زاد المسلم - مكتبة الحكمة' هو تطبيق إسلامي شامل يضم القرآن الكريم، التفسير، الأذكار، أوقات الصلاة مع التنبيهات، وتحديد القبلة. رفيقك اليومي للتقرب إلى الله.",
+  "about_app": "تطبيق ‘أَقِم’ هو تطبيق إسلامي بسيط ومباشر، مصمم خصيصًا لمساعدتك على أداء صلاتك في وقتها وبكل سهولة.\nيركز التطبيق على تقديم الأدوات الأساسية التي يحتاجها كل مسلم في حياته اليومية، من خلال واجهة تفاعلية سهلة الاستخدام تضمن لك تجربة مريحة وواضحة.\nمع ‘أَقِم’، لن تفوتك أي صلاة بعد الآن، حيث يعمل التطبيق كمُنبه شخصي وموجه دقيق لقبلتك، مما يجعله الأداة المثالية للحفاظ على أهم أركان الإسلام.",
   "@about_app": {
     "type": "text",
     "placeholders": {}
   },
-  "about_app2": "من اهم مميزات البرنامج :",
+  "about_app2": "مميزات التطبيق:",
   "@about_app2": {
     "type": "text",
     "placeholders": {}
   },
-  "about_app3": "'زاد المسلم - مكتبة الحكمة' هو تطبيق إسلامي متكامل يهدف إلى توفير جميع احتياجات المسلم في مكان واحد بطريقة سهلة ومريحة. يتميز التطبيق بتوفير القرآن الكريم كاملًا مع إمكانية قراءة الآيات، الاستماع إليها بصوت العديد من القراء المشهورين، وقراءة التفاسير المتنوعة لفهم أعمق لكل آية. كما يحتوي على أوقات الصلاة الدقيقة مع تنبيهات ذكية لتذكيرك بكل صلاة، بالإضافة إلى أداة تحديد اتجاه القبلة التي تساعدك على أداء العبادات بشكل صحيح.\n\nيشمل التطبيق أيضًا مجموعة شاملة من الأذكار اليومية والأدعية المأثورة لتقوية صلتك بالله، فضلًا عن مكتبة غنية بكتب التفسير. يمكنك أيضًا الاستماع إلى السور القرآنية بصوت قراء بارزين والاستمتاع بتجربة روحية مميزة. 'زاد المسلم - مكتبة الحكمة' هو الرفيق الأمثل لكل مسلم يسعى إلى تنظيم حياته الدينية وتعزيز إيمانه. ",
+  "about_app3": "أوقات الصلاة: يعرض التطبيق مواقيت الصلاة بدقة عالية بناءً على موقعك الجغرافي.\nإشعارات الأذان: استقبل تنبيهات صوتية عند حلول وقت كل صلاة لتكون على استعداد دائم.\nاتجاه القبلة: بوصلة دقيقة وسهلة الاستخدام لتحديد اتجاه القبلة الصحيح من أي مكان في العالم.\nواجهة تفاعلية: تصميم بسيط وواضح يجعل من السهل التنقل بين مميزات التطبيق دون أي تعقيد.",
   "@about_app3": {
     "type": "text",
     "placeholders": {}
@@ -399,6 +399,41 @@
   },
   "cancel": "إلغاء",
   "@cancel": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "searchForCity": "البحث عن المدينة",
+  "@searchForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "selectFromMap": "تحديد من الخريطة",
+  "@selectFromMap": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "enterCityName": "ادخل اسم المدينة...",
+  "@enterCityName": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "manualLocationNote": "يُفضل على الأجهزة هواوي تحديد الموقع يدوياً للحصول على أفضل دقة",
+  "@manualLocationNote": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "locationSetSuccessfully": "تم تحديد الموقع بنجاح",
+  "@locationSetSuccessfully": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "failedToSetLocation": "فشل في تحديد الموقع",
+  "@failedToSetLocation": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "failedToSearchCities": "فشل في البحث عن المدن",
+  "@failedToSearchCities": {
     "type": "text",
     "placeholders": {}
   },
@@ -509,6 +544,21 @@
   },
   "saving...": "جاري الحفظ...",
   "@saving...": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "locationSetted": "الموقع المحدد",
+  "@locationSetted": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "tapOnMapToSelectLocation": "اضغط على الخريطة لتحديد الموقع",
+  "@tapOnMapToSelectLocation": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "pleaseSelectLocation": "يرجى تحديد موقع على الخريطة",
+  "@pleaseSelectLocation": {
     "type": "text",
     "placeholders": {}
   }
