--- a/assets/locales/bn.json
+++ b/assets/locales/bn.json
@@ -322,17 +322,17 @@
     "type": "text",
     "placeholders": {}
   },
-  "about_app": "'জাদুল মুসলিম - মাকতাবাতুল হিকমাহ' হল একটি সম্পূর্ণ ইসলামিক অ্যাপ যাতে রয়েছে পবিত্র কুরআন, তাফসির, জিকির, বিজ্ঞপ্তিসহ নামাজের সময় এবং কিবলা নির্দেশক। আল্লাহর নিকটবর্তী হওয়ার জন্য আপনার দৈনন্দিন সঙ্গী।",
+  "about_app": "'আকিম' অ্যাপটি একটি সহজ এবং সরাসরি ইসলামিক অ্যাপ্লিকেশন, যা বিশেষভাবে আপনাকে সময়মতো এবং সহজে আপনার নামাজ আদায় করতে সাহায্য করার জন্য ডিজাইন করা হয়েছে।\nঅ্যাপটি প্রতিটি মুসলমানের দৈনন্দিন জীবনে প্রয়োজনীয় মৌলিক সরঞ্জামগুলি প্রদানের উপর ফোকাস করে, একটি ব্যবহার-বান্ধব ইন্টারঅ্যাক্টিভ ইন্টারফেসের মাধ্যমে যা আপনার জন্য আরামদায়ক এবং স্পষ্ট অভিজ্ঞতা নিশ্চিত করে।\n'আকিম' এর সাথে, আপনি আর কখনো কোনো নামাজ মিস করবেন না, কারণ অ্যাপটি ব্যক্তিগত অ্যালার্ম এবং আপনার কিবলার জন্য নির্ভুল গাইড হিসেবে কাজ করে, যা এটিকে ইসলামের সবচেয়ে গুরুত্বপূর্ণ স্তম্ভগুলি বজায় রাখার জন্য নিখুঁত সরঞ্জাম করে তোলে।",
   "@about_app": {
     "type": "text",
     "placeholders": {}
   },
-  "about_app2": "প্রোগ্রামের গুরুত্বপূর্ণ বৈশিষ্ট্যসমূহ:",
+  "about_app2": "অ্যাপের বৈশিষ্ট্যসমূহ:",
   "@about_app2": {
     "type": "text",
     "placeholders": {}
   },
-  "about_app3": "'জাদুল মুসলিম - মাকতাবাতুল হিকমাহ' হল একটি সম্পূর্ণ ইসলামিক অ্যাপ যার লক্ষ্য একটি সহজ ও আরামদায়ক উপায়ে একই স্থানে মুসলমানদের সকল প্রয়োজন পূরণ করা। অ্যাপটি বিশিষ্ট বৈশিষ্ট্য সহ সম্পূর্ণ পবিত্র কুরআন প্রদান করে যাতে আয়াত পড়া, বিভিন্ন বিখ্যাত কারীদের কণ্ঠে শোনা এবং প্রতিটি আয়াতের গভীর বোঝার জন্য বিভিন্ন তাফসির পড়ার সুবিধা রয়েছে। এতে রয়েছে প্রতিটি নামাজের জন্য স্মার্ট রিমাইন্ডার সহ নামাজের নির্ভুল সময় এবং সঠিকভাবে ইবাদত করতে সাহায্যকারী কিবলা নির্দেশক।\n\nঅ্যাপটিতে আল্লাহর সাথে আপনার সম্পর্ক শক্তিশালী করার জন্য দৈনন্দিন জিকির ও মাসনুন দোয়ার বিস্তৃত সংগ্রহ এবং তাফসিরের বইয়ের সমৃদ্ধ লাইব্রেরি রয়েছে। আপনি বিশিষ্ট কারীদের কণ্ঠে কুরআনের সূরা শুনতে পারেন এবং বিশেষ আধ্যাত্মিক অভিজ্ঞতা উপভোগ করতে পারেন। 'জাদুল মুসলিম - মাকতাবাতুল হিকমাহ' প্রতিটি মুসলমানের জন্য আদর্শ সঙ্গী যারা তাদের ধর্মীয় জীবন সংগঠিত করতে এবং ঈমান বৃদ্ধি করতে চান।",
+  "about_app3": "নামাজের সময়: অ্যাপটি আপনার ভৌগোলিক অবস্থানের উপর ভিত্তি করে উচ্চ নির্ভুলতার সাথে নামাজের সময় প্রদর্শন করে।\nআজানের বিজ্ঞপ্তি: প্রতিটি নামাজের সময় আসার সাথে সাথে অডিও সতর্কতা পান যাতে সর্বদা প্রস্তুত থাকতে পারেন।\nকিবলার দিক: বিশ্বের যেকোনো স্থান থেকে সঠিক কিবলার দিক নির্ধারণ করার জন্য নির্ভুল এবং ব্যবহার-সহজ কম্পাস।\nইন্টারঅ্যাক্টিভ ইন্টারফেস: সহজ এবং স্পষ্ট ডিজাইন যা কোনো জটিলতা ছাড়াই অ্যাপের বৈশিষ্ট্যগুলির মধ্যে নেভিগেট করা সহজ করে।",
   "@about_app3": {
     "type": "text",
     "placeholders": {}
@@ -399,6 +399,41 @@
   },
   "cancel": "বাতিল",
   "@cancel": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "searchForCity": "শহর খুঁজুন",
+  "@searchForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "selectFromMap": "মানচিত্র থেকে নির্বাচন করুন",
+  "@selectFromMap": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "enterCityName": "শহরের নাম লিখুন...",
+  "@enterCityName": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "manualLocationNote": "হুয়াওয়ে ডিভাইসের জন্য, সর্বোত্তম নির্ভুলতার জন্য ম্যানুয়াল অবস্থান সেট করা সুপারিশ করা হয়",
+  "@manualLocationNote": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "locationSetSuccessfully": "অবস্থান সফলভাবে সেট করা হয়েছে",
+  "@locationSetSuccessfully": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "failedToSetLocation": "অবস্থান সেট করতে ব্যর্থ",
+  "@failedToSetLocation": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "failedToSearchCities": "শহর খুঁজতে ব্যর্থ",
+  "@failedToSearchCities": {
     "type": "text",
     "placeholders": {}
   },
