--- a/assets/locales/ur.json
+++ b/assets/locales/ur.json
@@ -322,17 +322,17 @@
     "type": "text",
     "placeholders": {}
   },
-  "about_app": "'زاد المسلم - الحکمہ لائبریری' ایک جامع اسلامی ایپ ہے جس میں قرآن کریم، تفسیر، اذکار، نماز کے اوقات اطلاعات کے ساتھ، اور قبلے کا تعین شامل ہے۔ اللہ سے قربت کے لیے آپ کا روزانہ ساتھی۔",
+  "about_app": "'اقیم' ایپ ایک سادہ اور براہ راست اسلامی ایپلیکیشن ہے، جو خاص طور پر آپ کو اپنی نمازیں وقت پر اور آسانی سے ادا کرنے میں مدد کے لیے ڈیزائن کی گئی ہے۔\nیہ ایپ ان بنیادی ٹولز فراہم کرنے پر توجہ دیتی ہے جن کی ہر مسلمان کو اپنی روزمرہ زندگی میں ضرورت ہوتی ہے، ایک آسان استعمال انٹرایکٹو انٹرفیس کے ذریعے جو آپ کو آرام دہ اور واضح تجربے کی ضمانت دیتا ہے۔\n'اقیم' کے ساتھ، آپ اب کبھی کوئی نماز نہیں چھوڑیں گے، کیونکہ یہ ایپ ذاتی الارم اور آپ کے قبلے کے لیے درست رہنمائی کا کام کرتی ہے، جو اسے اسلام کے اہم ترین ارکان کو برقرار رکھنے کے لیے بہترین ٹول بناتا ہے۔",
   "@about_app": {
     "type": "text",
     "placeholders": {}
   },
-  "about_app2": "پروگرام کی اہم خصوصیات:",
+  "about_app2": "ایپ کی خصوصیات:",
   "@about_app2": {
     "type": "text",
     "placeholders": {}
   },
-  "about_app3": "'زاد المسلم - الحکمہ لائبریری' ایک مکمل اسلامی ایپلیکیشن ہے جس کا مقصد مسلمان کی تمام ضروریات کو ایک جگہ آسان اور آرام دہ طریقے سے فراہم کرنا ہے۔ ایپ قرآن کریم کو مکمل طور پر فراہم کرنے کی خصوصیت رکھتی ہے جس میں آیات پڑھنے، مختلف مشہور قاریوں کی آواز میں سننے، اور ہر آیت کی گہری سمجھ کے لیے مختلف تفاسیر پڑھنے کی سہولت ہے۔ اس میں ہر نماز کی یاد دلانے کے لیے ذہین اطلاعات کے ساتھ نماز کے درست اوقات بھی شامل ہیں، اور قبلے کی سمت معلوم کرنے کا آلہ بھی ہے جو عبادات کو صحیح طریقے سے ادا کرنے میں مدد کرتا ہے۔\n\nایپ میں اللہ سے تعلق مضبوط کرنے کے لیے روزانہ اذکار اور مسنون دعاؤں کا جامع مجموعہ بھی شامل ہے، نیز تفسیری کتب سے بھرپور لائبریری بھی ہے۔ آپ ممتاز قاریوں کی آواز میں قرآنی سورتوں کو سن سکتے ہیں اور منفرد روحانی تجربے سے لطف اندوز ہو سکتے ہیں۔ 'زاد المسلم - الحکمہ لائبریری' ہر اس مسلمان کے لیے بہترین ساتھی ہے جو اپنی مذہبی زندگی کو منظم کرنا اور اپنے ایمان کو مضبوط بنانا چاہتا ہے۔",
+  "about_app3": "نماز کے اوقات: ایپ آپ کی جغرافیائی پوزیشن کی بنیاد پر اعلیٰ درستگی کے ساتھ نماز کے اوقات دکھاتی ہے۔\nاذان کی اطلاعات: ہر نماز کا وقت آنے پر آڈیو الرٹس حاصل کریں تاکہ ہمیشہ تیار رہیں۔\nقبلے کی سمت: دنیا کے کسی بھی کونے سے صحیح قبلے کی سمت معین کرنے کے لیے درست اور استعمال میں آسان کمپاس۔\nانٹرایکٹو انٹرفیس: سادہ اور واضح ڈیزائن جو بغیر کسی پیچیدگی کے ایپ کی خصوصیات کے درمیان نیویگیٹ کرنا آسان بناتا ہے۔",
   "@about_app3": {
     "type": "text",
     "placeholders": {}
@@ -399,6 +399,41 @@
   },
   "cancel": "منسوخ",
   "@cancel": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "searchForCity": "شہر تلاش کریں",
+  "@searchForCity": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "selectFromMap": "نقشے سے منتخب کریں",
+  "@selectFromMap": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "enterCityName": "شہر کا نام درج کریں...",
+  "@enterCityName": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "manualLocationNote": "ہواوے آلات کے لیے، بہترین درستگی کے لیے دستی طور پر مقام کا تعین تجویز کیا جاتا ہے",
+  "@manualLocationNote": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "locationSetSuccessfully": "مقام کامیابی سے مقرر کر دیا گیا",
+  "@locationSetSuccessfully": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "failedToSetLocation": "مقام مقرر کرنے میں ناکام",
+  "@failedToSetLocation": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "failedToSearchCities": "شہروں کی تلاش میں ناکام",
+  "@failedToSearchCities": {
     "type": "text",
     "placeholders": {}
   },
