--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -561,5 +561,10 @@
   "@pleaseSelectLocation": {
     "type": "text",
     "placeholders": {}
+  },
+  "downloadingPrayerData": "جاري تحميل بيانات الصلاة...",
+  "@downloadingPrayerData": {
+    "type": "text",
+    "placeholders": {}
   }
 }
